Fix direct navigation to chrome://flags entries.
The fix consists of the following parts:
 1) Update obsolete logic in highlightReferencedFlag(), which was
    missed in previous CLs that introduced the flags-experiment
    component.
 2) Update CSS to account for the sticky header, so that when the
    browser scrolls a flags-experiment instance to the top of the
    viewport, it is actually visible. This basically restores the
    previous approach (extra padding, negative margin) to make this
    work.

Bug: 1467545
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4716659
Auto-Submit: Demetrios Papadopoulos <dpapad@chromium.org>
Commit-Queue: Demetrios Papadopoulos <dpapad@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1175346}

--- a/components/flags_ui/resources/flags.css
+++ b/components/flags_ui/resources/flags.css
@@ -3,12 +3,10 @@
  * found in the LICENSE file. */
 
 /* Adjustment for anchor links which would normally be hidden underneath the
-   fixed header. */
-:target::before {
-  content: '';
-  display: block;
-  height: 80px;
-  margin: -80px 0 0;
+   sticky header. */
+flags-experiment {
+  margin-top: calc(-1 * var(--header-height));
+  padding-top: var(--header-height);
 }
 
 html {
@@ -46,6 +44,8 @@ html {
   --link-color: var(--google-blue-700);
   --separator-color: rgba(0, 0, 0, .06);
   --toolbar-color: white;
+
+  --header-height: 57px;
 
   background: white;
   overflow-y: scroll;
@@ -160,6 +160,8 @@ button {
 }
 
 #header .flex-container {
+  box-sizing: border-box;
+  height: var(--header-height);
   margin: 0 auto;
   max-width: 700px;
 }
